# full-stack-template

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  meals-example.env
backend/: Cargo.toml  Dockerfile  README.md
backend/src/: main.rs  schema.rs
database/: Dockerfile  schema.sql
db/: Dockerfile  README.md  schema.sql
frontend/: Dockerfile  index.html  script.js
frontend/config/: custom_nginx.conf
frontend/src/: script.js
