[package]
name = "meal_website"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
actix-web = "4.0"
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9"
tokio = { version = "1.0", features = ["full"] }