[package]
name = "meal_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
tokio-postgres = "0.7"
actix-web = "4.0"
actix-cors = "0.6.0"
dotenv = "0.15.0"
log = "0.4"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
pre-commit = "0.5.2"
